--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,19 +1,19 @@
 @import "./config";
 
 section {
-    margin: 133px auto;
+    margin: 128px auto;
     background-color: $white;
-    max-width: 765px;
-    padding: 40px;
+    max-width: 740px;
+    padding: 38px 42px;
     border-radius: 16px;
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: 1.9375rem;
 }
 
 form {
-    margin-top: 35px;
+    margin-top: 32px;
 }
 
 .form-label {
@@ -25,11 +25,15 @@ form {
     }
 }
 
+label[for=message]{
+    margin-top: 26px;
+}
+
 fieldset {
-    @include flex_gap_20;
+    @include flex_gap(16px);
 
     border: none;
-    margin: 30px 0;
+    margin-top: 27px;
 
     & div {
         @include set_border;
@@ -38,15 +42,20 @@ fieldset {
     }
 
     & label {
-        font-size: 1.1875rem;
+        font-size: 1.125rem;
         vertical-align: middle;
         padding-left: 10px;
         cursor: pointer;
     }
+
+    &[aria-invalid=true] + .error-message{
+        display: inline-block;
+        margin: 20px 0 3px;
+    }
 }
 
 legend {
-    margin-bottom: 20px;
+    margin-bottom: 19px;
 
     &::after {
         @include add_require_symbol("\a0\a0\a0*");
@@ -57,20 +66,29 @@ input[type=text] {
     @include set_border;
     @include set_font(1.125rem);
 
-    margin-top: 10px;
+    margin-top: 11px;
     width: 100%;
-    height: 53px;
+    height: 51px;
     cursor: pointer;
     padding: 20px 22px;
 
     &:focus {
         @include change_focus_border;
     }
+
+    &[aria-invalid=true]{
+        border-color: $red;
+    }
+
+    &[aria-invalid=true] + .error-message{
+        display: inline-block;
+        margin: 12px 0 3px;
+    }
 }
 
 input[type=radio] {
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
     vertical-align: middle;
     cursor: pointer;
 
@@ -80,22 +98,27 @@ input[type=radio] {
 }
 
 input[type=checkbox] {
-    margin-right: 20px;
-    width: 24px;
+    margin-right: 18px;
+    width: 22px;
     cursor: pointer;
 
     &:checked {
         opacity: 0;
     }
+
+    // &[aria-invalid=true] ~ .error-message{
+    //     display: inline-block;
+    //     margin: 9px 0 8px;
+    // }
 }
 
 textarea {
     @include set_border;
-    @include set_font(1.175rem);
+    @include set_font(1.125rem);
     
-    margin-top: 10px;
+    margin-top: 11px;
     width: 100%;
-    height: 109px;
+    height: 105px;
     resize: none;
     cursor: pointer;
     padding: 15px 25px 15px 22px;
@@ -103,29 +126,39 @@ textarea {
     &:focus {
         @include change_focus_border;
     }
+
+    &[aria-invalid=true]{
+        border-color: $red;
+    }
+
+    &[aria-invalid=true] + .error-message{
+        display: inline-block;
+        margin: 9px 0 8px;
+    }
 }
 
 button {
-    margin-top: 45px;
+    margin-top: 43px;
     color: $white;
     background-color: $green_600;
     border-radius: 8px;
     width: 100%;
     font-weight: 700;
-    height: 62px;
+    height: 59px;
     border: 1px solid $green_600;
     font-size: 1.125rem;
     font-family: "Karla", sans-serif;
 }
 
 .name-container {
-    @include flex_gap_20;
+    @include flex_gap(16px);
 
-    margin-bottom: 30px;
+    margin-bottom: 27px;
 }
 
 .name-wrapper, .query-type-wrapper {
     width: 50%;
+    // margin-bottom: 29px;
 }
 
 .query-type-wrapper:hover {
@@ -141,26 +174,28 @@ button {
 }
 
 .success-msg, .error-message {
-    // display: none;
+    display: none;
     color: $red;
 }
 
 .consent-container {
-    display: flex;
-    margin-top: 41px;
-
-    & label {
-        position: relative;
-        cursor: pointer;
-
-        &::after {
-            @include add_require_symbol("\a0*");
+    // & span:first-of-type {
+        display: flex;
+        margin-top: 39px;
+    
+        & label {
+            position: relative;
+            cursor: pointer;
+    
+            &::after {
+                @include add_require_symbol("\a0*");
+            }
+    
+            &::before {
+                @include set_checked_input_styles("../assets/images/icon-checkbox-check.svg", -21px);
+            }
         }
-
-        &::before {
-            @include set_checked_input_styles("../assets/images/icon-checkbox-check.svg", -21px);
-        }
-    }
+    // }
 }
 
 .selected-query {
@@ -174,4 +209,9 @@ button {
 
 .consented label::before{
     opacity: 1;
+}
+
+.show-consent-error {
+    display: inline-block;
+    margin: 9px 0 8px;
 }
